<resources>
    <string name="app_name">ProjectRadiation</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="oMapsButtonstr">Maps_Button</string>
    <string name="hardcodedLocationButtonstr">Button</string>
    <string name="placeholder_text_double">phDouble</string>

    <!-- current menu -->
    <string name="current_title">Current</string>

    <!-- map menu -->
    <string name="maps_title">Map</string>

    <!-- settings menu -->
    <string name="settings_title">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- maximise fragment -->
    <!-- title -->
    <string name="uvi_title_maximise">Ultraviolet Index</string>
    <string name="pollen_title_maximise">Pollen</string>
    <string name="air_title_maximise">Air Quality Index</string>
    <!-- value names -->
    <string name="current_value_maximise">Current</string>
    <string name="average_value_maximise">Average</string>
    <string name="maximum_value_maximise">Maximum</string>
    <string name="minimum_value_maximise">Minimum</string>
    <!-- tags -->
    <string name="pollen_general_tag_maximise">General</string>
    <string name="pollen_grass_tag_maximise">Grass</string>
    <string name="pollen_tree_tag_maximise">Tree</string>
    <string name="pollen_weed_tag_maximise">Weed</string>
    <string name="place_holder_place">City_Name, Country</string>
    <string name="city_name_debug">City_Name</string>
    <string name="current_uv_index_desc">Current UV-Index</string>
    <string name="current_pollen_index_desc">Current Pollen-Index</string>
    <string name="current_air_index_desc">Current Air-Index</string>
    <string name="last_update_desc">Last Update</string>


</resources>