<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/summary_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:layout_margin="5dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="10dp"
    app:contentPadding="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <TextView
            style="@style/TextAppearance.AppCompat.Headline"
            android:id="@+id/location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/city_name_debug"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/uvi_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="200dp"

            android:text="@string/current_uv_index_desc"
            app:layout_constraintLeft_toLeftOf="parent"

            app:layout_constraintTop_toBottomOf="@+id/location" />

        <TextView
            android:id="@+id/uvi_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="200dp"
            android:layout_marginTop="10dp"

            android:text="uvi_now"
            app:layout_constraintRight_toRightOf="parent"

            app:layout_constraintTop_toBottomOf="@+id/location" />


        <TextView
            android:id="@+id/pollen_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="200dp"

            android:text="@string/current_pollen_index_desc"
            app:layout_constraintLeft_toLeftOf="parent"

            app:layout_constraintTop_toBottomOf="@+id/uvi_title" />

        <TextView
            android:id="@+id/pollen_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="200dp"

            android:text="pollen_now"
            app:layout_constraintRight_toRightOf="parent"

            app:layout_constraintTop_toBottomOf="@+id/uvi_value" />


        <TextView
            android:id="@+id/air_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="200dp"

            android:text="@string/current_air_index_desc"
            app:layout_constraintLeft_toLeftOf="parent"

            app:layout_constraintTop_toBottomOf="@+id/pollen_title" />

        <TextView
            android:id="@+id/air_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="200dp"

            android:text="air_now"
            app:layout_constraintRight_toRightOf="parent"

            app:layout_constraintTop_toBottomOf="@+id/pollen_value" />


        <TextView
            android:id="@+id/update_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="200dp"

            android:text="@string/last_update_desc"
            app:layout_constraintLeft_toLeftOf="parent"

            app:layout_constraintTop_toBottomOf="@+id/air_title" />

        <TextView
            android:id="@+id/update_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="200dp"
            android:layout_marginTop="8dp"

            android:text="pollen_now"
            app:layout_constraintRight_toRightOf="parent"

            app:layout_constraintTop_toBottomOf="@+id/air_value" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
